@@ -3,12 +3,13 @@
 New aliases
 
 * dhr and w3r, from Glenn Carr and Will Dean
-* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
-* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
 
 New Searches
 
+* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)
 * md5 - calculate an md-5 digest for a string
+* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
+* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
 
 Modified Searches
 
